[metadata]
name = cheap-pdu-mqtt
version = 0.0.1
author = derSuessmann
author_email = devel@dersuessmann.de
description = An MQTT client to connect cheap IP smart PDUs to Home Assistant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/derSuessmann/cheap-pdu-mqtt
project_urls =
    Bug Tracker = https://github.com/derSuessmann/cheap-pdu-mqtt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: System :: Hardware
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.14
install_requires =
    bs4
    lxml
    paho-mqtt
    pythonping
    requests
    urllib3

[options.entry_points]
console_scripts =
    pdu_control = client.pdu_control:argparser

[options.packages.find]
where = src
